--- a/sprip/bin/main/application.yml
+++ b/sprip/bin/main/application.yml
@@ -7,8 +7,8 @@ spring:
   datasource:
     url: jdbc:oracle:thin:@//localhost:1521/XE
     driver-class-name: oracle.jdbc.OracleDriver
-    username: spring
-    password: spring
+    username: sprip
+    password: sprip
     
 #JPA
   jpa:
